[gd_scene load_steps=13 format=3]

[ext_resource type="FontFile" uid="uid://dme1of41wrd0h" path="res://assets/fonts/game_font.otf" id="1"]
[ext_resource type="Theme" uid="uid://8v4be764xt8s" path="res://assets/base_theme.tres" id="2"]
[ext_resource type="Script" path="res://src/screen/end_screen.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://c61jtlh62dnb6" path="res://assets/ui/coin.png" id="4"]
[ext_resource type="Material" uid="uid://do36kvrgmr67n" path="res://assets/shader/material/glitch.tres" id="5"]
[ext_resource type="AudioStream" uid="uid://clb13nxm4p246" path="res://assets/sfx/click.wav" id="6"]
[ext_resource type="FontFile" uid="uid://c4613du2ro8w2" path="res://assets/fonts/Vazir.ttf" id="7"]

[sub_resource type="FontFile" id=1]
size = 96
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
spacing_bottom = -9
extra_spacing_char = 8
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=4]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="FontFile" id=5]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "exit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Glitch:material:shader_param/apply")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.1, 0.2 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.8, 1 ),
"transitions": PackedFloat32Array( 1, 2, 0.5 ),
"update": 0,
"values": [ Vector2( 0, -1280 ), Vector2( 0, 80 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Button:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.8, 0.9, 1 ),
"transitions": PackedFloat32Array( 1, 2, 2, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 80 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Record:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0, 0.8, 0.9, 1 ),
"transitions": PackedFloat32Array( 1, 2, 2, 0.5 ),
"update": 0,
"values": [ Vector2( 32, 192 ), Vector2( 32, 192 ), Vector2( 32, 272 ), Vector2( 32, 192 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Score:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0, 0.8, 0.9, 1 ),
"transitions": PackedFloat32Array( 1, 2, 2, 0.5 ),
"update": 0,
"values": [ Vector2( 40, 80 ), Vector2( 40, 80 ), Vector2( 40, 160 ), Vector2( 40, 80 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Wallet:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 0, 0.8, 0.9, 1 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 277, 280 ), Vector2( 277, 280 ), Vector2( 277, 364 ), Vector2( 277, 280 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Glitch:material:shader_param/apply")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ false ]
}

[node name="EndScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1280.0
offset_bottom = -1280.0
custom_minimum_size = Vector2( 720, 1280 )
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Score" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -320.0
offset_top = 80.0
offset_right = 320.0
offset_bottom = 168.0
scale = Vector2( 0.773, 1 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_fonts/font = SubResource( 1 )
text = "000000000000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Record" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -328.0
offset_top = 192.0
offset_right = 328.0
offset_bottom = 240.0
theme_override_fonts/font = SubResource( 4 )
text = "Your record: %d"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wallet" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -83.0
offset_top = 280.0
offset_right = 83.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Wallet"]
offset_top = 22.0
offset_right = 66.0
offset_bottom = 57.0
grow_horizontal = 0
theme_override_fonts/font = SubResource( 5 )
text = "00"

[node name="VSeparator" type="VSeparator" parent="Wallet"]
modulate = Color( 1, 1, 1, 0 )
offset_left = 70.0
offset_right = 102.0
offset_bottom = 80.0
custom_minimum_size = Vector2( 32, 0 )

[node name="TextureRect" type="TextureRect" parent="Wallet"]
offset_left = 106.0
offset_right = 186.0
offset_bottom = 80.0
custom_minimum_size = Vector2( 80, 80 )
texture = ExtResource( 4 )
stretch_mode = 1

[node name="Button" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 6.10352e-05
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="Button" parent="Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -64.0
offset_right = 200.0
offset_bottom = 65.0
custom_minimum_size = Vector2( 400, 100 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomizeButton" type="Button" parent="Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 69.0
offset_right = 200.0
offset_bottom = 198.0
custom_minimum_size = Vector2( 400, 100 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
text = "Customize"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 202.0
offset_right = 200.0
offset_bottom = 331.0
custom_minimum_size = Vector2( 400, 100 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
text = "Exit"

[node name="Glitch" type="ColorRect" parent="."]
material = ExtResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="ButtonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/exit = SubResource( 2 )
anims/show = SubResource( 3 )

[connection signal="pressed" from="Button/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="Button/CustomizeButton" to="." method="_on_CustomizeButton_pressed"]
[connection signal="pressed" from="Button/ExitButton" to="." method="_on_ExitButton_pressed"]
